WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268889
REGRESSION (
272869@main
): Actions for QR codes sometimes fail to show up when long pressing
https://bugs.webkit.org/show_bug.cgi?id=268889
Summary
REGRESSION (272869@main): Actions for QR codes sometimes fail to show up when...
Wenson Hsieh
Reported
2024-02-06 21:14:13 PST
rdar://122433291
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-02-07 08:14:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24007
EWS
Comment 2
2024-02-07 10:18:47 PST
Committed
274222@main
(6e1c1a40d348): <
https://commits.webkit.org/274222@main
> Reviewed commits have been landed. Closing PR #24007 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug